UIUX-152: Form Validation messages aren`t positioned correctly on Safari only

--- a/sugarcrm/styleguide/less/sugar-specific/forms.less
+++ b/sugarcrm/styleguide/less/sugar-specific/forms.less
@@ -4,7 +4,7 @@
 	.add-on {
 		border:none;
 		background:transparent !important;
-		margin-left:-28px;
+		margin-left:-26px;
 		position:relative;
 		/*
 		top:0;
